<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <View
        android:id="@+id/xAxis"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <View
        android:id="@+id/yAxis"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>


    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_j1939_1708"
        android:layout_alignBottom="@+id/btnCloseInterface"
        android:layout_alignParentStart="true" />
            <TextView
                android:id="@+id/txtBaud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baud_rate"
                android:textColor="@android:color/black"
                android:layout_alignBottom="@+id/swSilentMode"
                android:layout_alignParentStart="true" />
    <Switch
        android:id="@+id/swBlockOnRead"
        android:text="@string/block_on_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnGetBaudrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/swFilters"
        android:layout_alignBottom="@+id/swFilters"
        android:layout_alignParentStart="true"
        android:text="@string/get_baudrate"
        android:textColor="@color/colorPrimaryDark" />


    <Button
                android:id="@+id/baud250"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        android:text="@string/_250k"
        android:layout_below="@+id/swDiscardInBuffer" />

    <Button
                android:id="@+id/baud500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_500k"
        android:layout_below="@+id/swDiscardInBuffer"
        android:layout_toEndOf="@+id/yAxis" />

    <Switch
        android:id="@+id/swSilentMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/silent_mode"
        android:layout_above="@+id/btnGetBaudrate"
        android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/lblCanSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/j1939_send_interval"
                android:textColor="@android:color/black"
                android:layout_below="@+id/baud250"
                android:layout_alignParentStart="true" />

            <SeekBar
                android:layout_height="wrap_content"
                android:layout_width="240dp"
                android:id="@+id/seekBarSendSpeed"
                android:minHeight="5dip"
                android:maxHeight="5dip"
                android:max="1000"
                android:layout_below="@+id/baud500"
                android:layout_toEndOf="@+id/baud250"
                android:layout_alignStart="@+id/btnSendJ1939" />

            <TextView
                android:id="@+id/txtCanSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtBaud"
                android:layout_marginTop="@dimen/label_vertical_margin"
                android:layout_toRightOf="@id/seekBarSendSpeed"
                android:layout_toEndOf="@id/seekBarSendSpeed"
                android:layout_alignBaseline="@id/lblCanSpeed"/>

    <Button
        android:id="@+id/btnSendJ1939"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transmit_can"
        android:layout_alignBaseline="@+id/swCycleTransmitJ1939"
        android:layout_alignBottom="@+id/swCycleTransmitJ1939"
        android:layout_alignStart="@+id/lblInterfaceStatus" />

    <Switch
        android:id="@+id/swCycleTransmitJ1939"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cycle_transmit"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/seekBarSendSpeed"
        android:layout_alignEnd="@+id/btnGetBaudrate" />
<!--
    <TextView
        android:id="@+id/txtJ1708Speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtBaud"
        android:layout_marginTop="@dimen/label_vertical_margin"
        android:layout_toRightOf="@id/seekBarSendJ1708Speed"
        android:layout_toEndOf="@id/seekBarSendJ1708Speed"
        android:layout_alignBaseline="@id/lblJ1708Speed"
        android:textColor="@android:color/black"/>-->

    <TextView
        android:id="@+id/lblInterfaceStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interface_status"
        android:layout_alignBaseline="@+id/txtSocketStatus"
        android:layout_alignBottom="@+id/txtSocketStatus"
        android:layout_alignEnd="@+id/lblSocketStatus" />

    <TextView
        android:id="@+id/txtInterfaceStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closed"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="17dp" />


    <TextView
        android:id="@+id/lblSocketStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/socket_status"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/swFilters" />

    <TextView
        android:id="@+id/txtSocketStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closed"
        android:layout_below="@+id/swBlockOnRead"
        android:layout_alignStart="@+id/txtInterfaceStatus" />



    <Button
        android:id="@+id/btnCloseInterface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_interface"
        android:layout_above="@+id/swSilentMode"
        android:layout_alignEnd="@+id/txtCanSpeed"
        android:layout_marginBottom="40dp"
        android:layout_toEndOf="@+id/lblInterfaceStatus"
        android:layout_alignStart="@+id/swSilentMode" />

    <Switch
        android:id="@+id/swFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters"
        android:layout_above="@+id/xAxis"
        android:layout_alignParentEnd="true" />

    <Switch
        android:id="@+id/swDiscardInBuffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discard"
        android:layout_below="@+id/btnGetBaudrate"
        android:layout_alignEnd="@+id/txtCanSpeed" />




</RelativeLayout>
