<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <View
        android:id="@+id/xAxis"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <View
        android:id="@+id/yAxis"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>


    <TextView
        android:id="@+id/lblSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:layout_marginTop="@dimen/label_vertical_margin"
        android:textStyle="normal|bold"/>

    <Switch
        android:id="@+id/swStartOnBoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_on_boot"
        android:layout_below="@id/lblSettings"
        android:layout_marginTop="@dimen/label_vertical_margin"/>



    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rgBaudRateSelection"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/swStartOnBoot"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/label_vertical_margin">
        <RadioButton android:id="@+id/radio_250k"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/_250k"/>
        <RadioButton android:id="@+id/radio_500k"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/_250k"/>
    </RadioGroup>

    <TextView
        android:id="@+id/txtBaud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/label_vertical_margin"
        android:layout_below="@id/rgBaudRateSelection"
        android:text="@string/baud_rate"
        android:textColor="@android:color/black"/>

    <Switch
        android:id="@+id/swBlockOnRead"
        android:text="@string/block_on_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/yAxis"
        android:layout_toStartOf="@id/yAxis"
        android:layout_alignBaseline="@id/textView"/>
    <Button
        android:id="@+id/btnGetBaudrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_baudrate"
        android:layout_toRightOf="@id/txtBaud"
        android:layout_toEndOf="@id/txtBaud"
        android:layout_alignBaseline="@id/txtBaud"/>


    <Button
        android:id="@+id/baud250"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtBaud"
        android:layout_marginTop="@dimen/label_vertical_margin"
        android:layout_alignLeft="@id/txtBaud"
        android:layout_alignStart="@id/txtBaud"
        android:text="@string/_250k"/>

    <Button
        android:id="@+id/baud500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/baud250"
        android:layout_toEndOf="@id/baud250"
        android:layout_alignBaseline="@id/baud250"
        android:text="@string/_500k"/>

    <Switch
        android:id="@+id/swSilentMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/silent_mode"
        android:layout_below="@+id/swFilters"
        android:layout_toEndOf="@+id/lblInterfaceStatus" />

    <TextView
        android:id="@+id/lblCanSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/baud250"
        android:layout_marginTop="@dimen/label_vertical_margin"
        android:text="@string/j1939_send_interval"
        android:textColor="@android:color/black"/>

    <SeekBar
        android:layout_height="wrap_content"
        android:layout_width="240dp"
        android:id="@+id/seekBarSendSpeed"
        android:layout_toRightOf="@id/lblCanSpeed"
        android:layout_toEndOf="@id/lblCanSpeed"
        android:layout_alignTop="@id/lblCanSpeed"
        android:minHeight="5dip"
        android:maxHeight="5dip"
        android:max="1000"/>

    <TextView
        android:id="@+id/txtCanSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtBaud"
        android:layout_marginTop="@dimen/label_vertical_margin"
        android:layout_toRightOf="@id/seekBarSendSpeed"
        android:layout_toEndOf="@id/seekBarSendSpeed"
        android:layout_alignBaseline="@id/lblCanSpeed"/>

    <Button
        android:id="@+id/btnSendJ1939"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transmit_can"
        android:layout_below="@+id/lblCanSpeed"
        android:layout_marginTop="@dimen/label_vertical_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Switch
        android:id="@+id/swCycleTransmitJ1939"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cycle_transmit"
        android:layout_below="@id/txtCanSpeed"
        android:layout_alignBaseline="@+id/btnSendJ1939"
        android:layout_toRightOf="@+id/btnSendJ1939"
        android:layout_toEndOf="@+id/btnSendJ1939"/>

    <TextView
        android:id="@+id/lblJ1708Speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSendJ1939"
        android:layout_marginTop="@dimen/label_vertical_margin"
        android:text="@string/j1939_send_interval"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <SeekBar
        android:layout_height="wrap_content"
        android:layout_width="240dp"
        android:id="@+id/seekBarSendJ1708Speed"
        android:layout_toRightOf="@id/lblJ1708Speed"
        android:layout_toEndOf="@id/lblJ1708Speed"
        android:layout_alignTop="@id/lblJ1708Speed"
        android:minHeight="5dip"
        android:maxHeight="5dip"
        android:max="1000"/>

    <TextView
        android:id="@+id/txtJ1708Speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtBaud"
        android:layout_marginTop="@dimen/label_vertical_margin"
        android:layout_toRightOf="@id/seekBarSendJ1708Speed"
        android:layout_toEndOf="@id/seekBarSendJ1708Speed"
        android:layout_alignBaseline="@id/lblJ1708Speed"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/btnSendJ1708"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transmit_j1708"
        android:layout_below="@+id/seekBarSendJ1708Speed"
        android:layout_marginTop="@dimen/label_vertical_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Switch
        android:id="@+id/swCycleTransmitJ1708"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cycle_transmit"
        android:layout_alignBaseline="@+id/btnSendJ1708"
        android:layout_toRightOf="@+id/btnSendJ1708"
        android:layout_toEndOf="@+id/btnSendJ1708"/>

    <TextView
        android:id="@+id/lblInterfaceStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interface_status"
        android:layout_alignBaseline="@+id/swBlockOnRead"
        android:layout_alignBottom="@+id/swBlockOnRead"
        android:layout_toEndOf="@+id/swBlockOnRead" />

    <TextView
        android:id="@+id/txtInterfaceStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closed"
        android:layout_alignBaseline="@+id/swBlockOnRead"
        android:layout_alignBottom="@+id/swBlockOnRead"
        android:layout_toEndOf="@+id/lblInterfaceStatus" />


    <TextView
        android:id="@+id/lblSocketStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/label_vertical_margin"
        android:text="@string/socket_status"
        android:layout_below="@+id/lblInterfaceStatus"
        android:layout_alignLeft="@+id/lblInterfaceStatus"
        android:layout_alignStart="@id/lblInterfaceStatus"/>

    <TextView
        android:id="@+id/txtSocketStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closed"
        android:layout_toRightOf="@id/lblSocketStatus"
        android:layout_toEndOf="@id/lblSocketStatus"
        android:layout_alignBaseline="@id/lblSocketStatus"/>



    <Button
        android:id="@+id/btnCloseInterface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/label_vertical_margin"
        android:text="@string/close_interface"
        android:layout_below="@id/lblSocketStatus"
        android:layout_alignLeft="@id/lblSocketStatus"
        android:layout_alignStart="@id/lblSocketStatus"/>

    <Switch
        android:id="@+id/swFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters"
        android:layout_below="@+id/rgBaudRateSelection"
        android:layout_toEndOf="@+id/txtSocketStatus" />

    <Switch
        android:id="@+id/swDiscardInBuffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discard"
        android:layout_above="@+id/txtCanSpeed"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/btnGetBaudrate" />




</RelativeLayout>
