<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <View
        android:id="@+id/xAxis"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <View
        android:id="@+id/yAxis"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/lblSocketStatus"
        android:layout_below="@+id/txtInterfaceStatus"
        android:layout_marginTop="28dp"
        android:text="@string/lbl_j1939_1708" />

    <TextView
        android:id="@+id/txtBaud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/xAxis"
        android:layout_toEndOf="@+id/yAxis"
        android:text="@string/baud_rate"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnGetBaudrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtBaud"
        android:layout_alignBottom="@+id/txtBaud"
        android:layout_alignParentStart="true"
        android:text="@string/get_baudrate"
        android:textAppearance="@style/TextAppearance.AppCompat" />


    <Button
        android:id="@+id/baud250"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="15dp"
        android:text="@string/_250k"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <Button
        android:id="@+id/baud500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/baud250"
        android:layout_alignBottom="@+id/baud250"
        android:layout_toEndOf="@+id/btnGetBaudrate"
        android:text="@string/_500k"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <Button
        android:id="@+id/btnCloseCan1Interface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/baud500"
        android:text="@string/close_interface"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:id="@+id/lblCanSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/seekBarSendSpeed"
        android:text="@string/j1939_send_interval"
        android:textColor="@android:color/black" />

    <SeekBar
        android:id="@+id/seekBarSendSpeed"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/swCycleTransmitJ1939"
        android:layout_below="@+id/btnGetBaudrate"
        android:layout_marginTop="34dp"
        android:max="1000"
        android:maxHeight="5dip"
        android:minHeight="5dip" />

    <TextView
        android:id="@+id/txtCanSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/lblCanSpeed"
        android:layout_below="@id/txtBaud"
        android:layout_marginTop="@dimen/label_vertical_margin"
        android:layout_toEndOf="@id/seekBarSendSpeed"
        android:layout_toRightOf="@id/seekBarSendSpeed" />

    <Button
        android:id="@+id/btnSendJ1939"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/swCycleTransmitJ1939"
        android:layout_alignBottom="@+id/swCycleTransmitJ1939"
        android:layout_alignParentStart="true"
        android:text="@string/transmit_can"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <Switch
        android:id="@+id/swCycleTransmitJ1939"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBarSendSpeed"
        android:layout_marginTop="36dp"
        android:layout_toEndOf="@+id/baud500"
        android:text="@string/cycle_transmit" />
    <!--
        <TextView
            android:id="@+id/txtJ1708Speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtBaud"
            android:layout_marginTop="@dimen/label_vertical_margin"
            android:layout_toRightOf="@id/seekBarSendJ1708Speed"
            android:layout_toEndOf="@id/seekBarSendJ1708Speed"
            android:layout_alignBaseline="@id/lblJ1708Speed"
            android:textColor="@android:color/black"/>-->

    <TextView
        android:id="@+id/lblInterfaceStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/interface_status" />

    <TextView
        android:id="@+id/txtInterfaceStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblSocketStatus"
        android:layout_alignBottom="@+id/lblSocketStatus"
        android:layout_toEndOf="@+id/yAxis"
        android:text="@string/closed" />


    <TextView
        android:id="@+id/lblSocketStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/lblInterfaceStatus"
        android:layout_below="@+id/lblInterfaceStatus"
        android:layout_marginTop="13dp"
        android:text="@string/socket_status" />

    <TextView
        android:id="@+id/txtSocketStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/yAxis"
        android:text="@string/closed" />


</RelativeLayout>
