<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <View
        android:id="@+id/xAxis"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <View
        android:id="@+id/yAxis"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_j1939_1708"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/lblSocketStatus"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/txtBaud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baud_rate"
        android:textColor="@android:color/black"
        android:layout_alignBaseline="@+id/btnGetBaudrate"
        android:layout_alignBottom="@+id/btnGetBaudrate"
        android:layout_alignStart="@+id/yAxis" />


    <Button
        android:id="@+id/baud500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorButtons"
        android:text="@string/_500k"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="13sp"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/baud250"
        android:layout_marginStart="13dp" />

    <TextView
        android:id="@+id/lblCanSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j1939_send_interval"
        android:textColor="@android:color/black"
        android:layout_alignBottom="@+id/seekBarSendSpeed"
        android:layout_alignStart="@+id/btnSendJ1939" />

    <SeekBar
        android:layout_height="wrap_content"
        android:layout_width="240dp"
        android:id="@+id/seekBarSendSpeed"
        android:minHeight="5dip"
        android:maxHeight="5dip"
        android:max="1000"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/btnGetBaudrate"
        android:layout_alignStart="@+id/yAxis" />

    <TextView
        android:id="@+id/txtCanSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtBaud"
        android:layout_marginTop="@dimen/label_vertical_margin"
        android:layout_toRightOf="@id/seekBarSendSpeed"
        android:layout_toEndOf="@id/seekBarSendSpeed"
        android:layout_alignBaseline="@id/lblCanSpeed"/>

    <Button
        android:id="@+id/btnSendJ1939"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@color/colorButtons"
        android:text="@string/transmit_can"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="13sp"
        android:layout_below="@+id/lblCanSpeed"
        android:layout_alignStart="@+id/btnGetBaudrate" />

    <Switch
        android:id="@+id/swCycleTransmitJ1939"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cycle_transmit"
        android:layout_alignBaseline="@+id/btnSendJ1939"
        android:layout_alignBottom="@+id/btnSendJ1939"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/yAxis" />
    <!--
        <TextView
            android:id="@+id/txtJ1708Speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtBaud"
            android:layout_marginTop="@dimen/label_vertical_margin"
            android:layout_toRightOf="@id/seekBarSendJ1708Speed"
            android:layout_toEndOf="@id/seekBarSendJ1708Speed"
            android:layout_alignBaseline="@id/lblJ1708Speed"
            android:textColor="@android:color/black"/>-->

    <TextView
        android:id="@+id/lblInterfaceStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interface_status"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/txtInterfaceStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closed"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/yAxis" />


    <TextView
        android:id="@+id/lblSocketStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/socket_status"
        android:layout_below="@+id/lblInterfaceStatus"
        android:layout_alignStart="@+id/lblInterfaceStatus"
        android:layout_marginTop="13dp" />

    <TextView
        android:id="@+id/txtSocketStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closed"
        android:layout_alignBaseline="@+id/lblSocketStatus"
        android:layout_alignBottom="@+id/lblSocketStatus"
        android:layout_alignStart="@+id/yAxis" />

    <Button
        android:id="@+id/btnGetBaudrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorButtons"
        android:text="@string/get_baudrate"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="13sp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/baud250"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorButtons"
        android:text="@string/_250k"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="13sp"
        android:layout_alignBottom="@+id/baud500" />

    <Button
        android:id="@+id/btnCloseCan1Interface"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorButtons"
        android:lineSpacingExtra="8sp"
        android:text="@string/close_interface"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="13sp"
        android:layout_alignBaseline="@+id/baud500"
        android:layout_alignBottom="@+id/baud500"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/txtSocketStatus" />


</RelativeLayout>
